# octocord

./: Cargo.toml  README.md  install.sh  main.rs  rust-toolchain.toml  video.rs
discord-recorder/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  README.md  build.rs  install.sh  rust-toolchain.toml
discord-recorder/src/: audio.rs  build.rs  config.rs  gui.rs  lib.rs  main.rs  screen.rs  test_fixes.rs  video.rs  webcam.rs
discord-recorder/test/: video.rs
src/: audio.rs  config.rs  gui.rs  lib.rs  runtime.rs  screen.rs  test_fixes.rs  video.rs  webcam.rs
