[package]
name = "discord-recorder"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
egui = "0.29"
eframe = "0.29"

# Screen Capture
screenshots = "0.8"

# Audio Recording
cpal = "0.15"
rodio = "0.19"
hound = "3.5"

# Video Encoding
ffmpeg-next = { version = "8.0.0", features = ["codec", "format", "filter", "software-resampling", "software-scaling"] }

# Webcam Support
nokhwa = { version = "0.10", features = ["input-native", "output-threaded"], optional = true }

# Image Processing
image = "0.25"

# Async Support
tokio = { version = "1.40", features = ["full"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# File Operations
walkdir = "2.5"
dirs = "5.0"

# System Information
sysinfo = "0.32"

# Time Handling
chrono = "0.4"

# Threading
crossbeam = "0.8"
parking_lot = "0.12"

[features]
default = ["webcam"]
webcam = ["nokhwa"]
